--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   --on-background: #424242;
   --on-background-alt: rgba(66, 66, 66, 0.7);
   --background: rgb(255, 255, 255);
-  --box-shadow: 0 5px 20px 1px rgba(0, 0, 0, 0.2);
+  --box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.2);
 }
 
 [data-theme="dark"] {
@@ -98,6 +98,7 @@ a:focus {
   padding: 10px 20px;
   margin-right: 25px;
   width: auto;
+  text-align: center;
   background: var(--background);
   box-shadow: var(--box-shadow);
 }
