add font awesome icons

--- a/style.css
+++ b/style.css
@@ -172,3 +172,14 @@ p {
   margin: 0;
   line-height: 25px;
 }
+
+.fab {
+  font-size: 64px;
+  margin-right: 50px;
+  cursor: pointer;
+  color: var(--primary-color);
+}
+
+.fab:hover {
+  color: var(--on-background);
+}
