--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   --primary-variant: #6c63ff;
   --secondary-color: #03dac5;
   --on-primary: #000;
-  --on-background: rgba(255, 255, 255, 0.9);
+  --on-background: #6629af;
   --on-background-alt: rgba(255, 255, 255, 0.7);
   --background: #121212;
 }
@@ -91,6 +91,7 @@ a:focus {
 /* About Section */
 .about-container {
   display: flex;
+  margin-top: 2%;
 }
 
 .image-container {
